fix: submenu-beyond-8-will-overflow

--- a/style/web/components/menu/_index-v2.less
+++ b/style/web/components/menu/_index-v2.less
@@ -827,6 +827,7 @@ a.@{prefix}-menu__item {
       .@{prefix}-menu__popup {
         top: 0;
         left: calc(100% + @horizontal-spacer);
+        overflow-y: auto;
 
         // &::before {
         //   content: "";
